--- a/ui/Selector.ui
+++ b/ui/Selector.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>754</width>
-    <height>248</height>
+    <width>752</width>
+    <height>242</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>752</width>
-    <height>244</height>
+    <height>242</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -45,7 +45,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -284,13 +284,13 @@
              <item>
               <widget class="QGroupBox" name="groupBox_14">
                <property name="title">
-                <string>Minimum Area</string>
+                <string>Minimum Pixels</string>
                </property>
                <layout class="QGridLayout" name="gridLayout_15">
                 <item row="0" column="0">
                  <widget class="QDoubleSpinBox" name="Box_min_area">
                   <property name="decimals">
-                   <number>10</number>
+                   <number>3</number>
                   </property>
                   <property name="maximum">
                    <double>10000000000000000000000.000000000000000</double>
@@ -472,10 +472,10 @@
              <item>
               <widget class="QGroupBox" name="groupBox_2">
                <property name="toolTip">
-                <string>execute SAM with move mode (M)</string>
+                <string>Preview SAM reslut while moving mouse (H)</string>
                </property>
                <property name="title">
-                <string>Hover mode</string>
+                <string>Preview mode</string>
                </property>
                <layout class="QGridLayout" name="gridLayout_11">
                 <item row="0" column="0">
@@ -487,7 +487,7 @@
                    </sizepolicy>
                   </property>
                   <property name="toolTip">
-                   <string>Execute SAM while moving mouse (H)</string>
+                   <string>Preview SAM reslut while moving mouse (P)</string>
                   </property>
                   <property name="text">
                    <string>Enable</string>
@@ -499,6 +499,9 @@
              </item>
              <item>
               <widget class="QGroupBox" name="EditModeGroupBox">
+               <property name="toolTip">
+                <string>Toggle to enable/disable the labelling tool</string>
+               </property>
                <property name="title">
                 <string>Editable</string>
                </property>
@@ -521,7 +524,7 @@
                    </size>
                   </property>
                   <property name="toolTip">
-                   <string>Toggle to enable the labelling tool</string>
+                   <string>Toggle to enable/disable the labelling tool</string>
                   </property>
                   <property name="text">
                    <string>Enable</string>
@@ -552,31 +555,6 @@
            <string>Colors</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
-           <item row="0" column="0">
-            <widget class="QGroupBox" name="groupBox_6">
-             <property name="title">
-              <string>Background Point</string>
-             </property>
-             <layout class="QGridLayout" name="gridLayout_19">
-              <item row="0" column="0">
-               <widget class="QgsColorButton" name="ColorButton_bgpt">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="minimumSize">
-                 <size>
-                  <width>15</width>
-                  <height>16</height>
-                 </size>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </widget>
-           </item>
            <item row="0" column="1">
             <widget class="QGroupBox" name="groupBox_7">
              <property name="title">
@@ -627,14 +605,39 @@
              </layout>
             </widget>
            </item>
-           <item row="1" column="0">
+           <item row="0" column="0">
             <widget class="QGroupBox" name="groupBox_9">
              <property name="title">
               <string>Foreground Point</string>
              </property>
              <layout class="QGridLayout" name="gridLayout_18">
-              <item row="0" column="0">
+              <item row="1" column="0">
                <widget class="QgsColorButton" name="ColorButton_fgpt">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>15</width>
+                  <height>16</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QGroupBox" name="groupBox_6">
+             <property name="title">
+              <string>Background Point</string>
+             </property>
+             <layout class="QGridLayout" name="gridLayout_19">
+              <item row="0" column="0">
+               <widget class="QgsColorButton" name="ColorButton_bgpt">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                   <horstretch>0</horstretch>
@@ -661,6 +664,25 @@
            <string>Others</string>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_2">
+           <item>
+            <widget class="QGroupBox" name="groupBox_11">
+             <property name="title">
+              <string>Default Minimum Pixels</string>
+             </property>
+             <layout class="QGridLayout" name="gridLayout_12">
+              <item row="0" column="0">
+               <widget class="QDoubleSpinBox" name="Box_min_area_default">
+                <property name="decimals">
+                 <number>3</number>
+                </property>
+                <property name="maximum">
+                 <double>10000000000000000000000.000000000000000</double>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
            <item>
             <widget class="QGroupBox" name="groupBox_10">
              <property name="title">
@@ -689,25 +711,6 @@
                 </property>
                 <property name="checked">
                  <bool>false</bool>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </widget>
-           </item>
-           <item>
-            <widget class="QGroupBox" name="groupBox_11">
-             <property name="title">
-              <string>Default Minimum Area</string>
-             </property>
-             <layout class="QGridLayout" name="gridLayout_12">
-              <item row="0" column="0">
-               <widget class="QDoubleSpinBox" name="Box_min_area_default">
-                <property name="decimals">
-                 <number>10</number>
-                </property>
-                <property name="maximum">
-                 <double>10000000000000000000000.000000000000000</double>
                 </property>
                </widget>
               </item>
