--- a/ui/Selector.ui
+++ b/ui/Selector.ui
@@ -288,7 +288,7 @@
                </property>
                <layout class="QGridLayout" name="gridLayout_15">
                 <item row="0" column="0">
-                 <widget class="QDoubleSpinBox" name="Box_min_area">
+                 <widget class="QDoubleSpinBox" name="Box_min_pixel">
                   <property name="decimals">
                    <number>3</number>
                   </property>
@@ -671,7 +671,7 @@
              </property>
              <layout class="QGridLayout" name="gridLayout_12">
               <item row="0" column="0">
-               <widget class="QDoubleSpinBox" name="Box_min_area_default">
+               <widget class="QDoubleSpinBox" name="Box_min_pixel_default">
                 <property name="decimals">
                  <number>3</number>
                 </property>
