--- a/ui/EncoderCopilot.ui
+++ b/ui/EncoderCopilot.ui
@@ -129,7 +129,7 @@
              </widget>
             </item>
             <item row="2" column="0">
-             <widget class="QLabel" name="label_batch_settings">
+             <widget class="QLabel" name="label_patch_settings">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                 <horstretch>0</horstretch>
